--- a/resource/360.qrc
+++ b/resource/360.qrc
@@ -51,4 +51,34 @@
         <file alias="tab_boottime">360SpeedupOpt_theme/image/tab_boottime.png</file>
         <file alias="tab_start">360SpeedupOpt_theme/image/tab_start.png</file>
     </qresource>
+    <qresource prefix="/main">
+        <file>default_theme/MainFrame/Image/AboutLogo.png</file>
+        <file>default_theme/MainFrame/Image/background_mainwnd.jpg</file>
+        <file>default_theme/MainFrame/Image/btn_examine_now.png</file>
+        <file>default_theme/MainFrame/Image/btn_scan_background.png</file>
+        <file>default_theme/MainFrame/Image/btn_view_detail.png</file>
+        <file>default_theme/MainFrame/Image/examine_score.png</file>
+        <file alias="menu">default_theme/MainFrame/Image/Menu.png</file>
+        <file alias="playvideo">default_theme/MainFrame/Image/playvideo.png</file>
+        <file alias="skin">default_theme/MainFrame/Image/Skin.png</file>
+        <file alias="sys_close">default_theme/MainFrame/Image/sys_button_close.png</file>
+        <file alias="sys_min">default_theme/MainFrame/Image/sys_button_min.png</file>
+        <file>default_theme/MainFrame/Image/score_bkg_green.png</file>
+        <file>default_theme/MainFrame/Image/score_bkg_red.png</file>
+        <file>default_theme/MainFrame/Image/score_bkg_yellow.png</file>
+        <file>default_theme/MainFrame/Image/question.png</file>
+        <file>default_theme/MainFrame/Image/exclamation.png</file>
+    </qresource>
+    <qresource prefix="/numbers/main">
+        <file alias="0">default_theme/font/tijian_score/0.png</file>
+        <file alias="1">default_theme/font/tijian_score/1.png</file>
+        <file alias="2">default_theme/font/tijian_score/2.png</file>
+        <file alias="3">default_theme/font/tijian_score/3.png</file>
+        <file alias="4">default_theme/font/tijian_score/4.png</file>
+        <file alias="5">default_theme/font/tijian_score/5.png</file>
+        <file alias="6">default_theme/font/tijian_score/6.png</file>
+        <file alias="7">default_theme/font/tijian_score/7.png</file>
+        <file alias="8">default_theme/font/tijian_score/8.png</file>
+        <file alias="9">default_theme/font/tijian_score/9.png</file>
+    </qresource>
 </RCC>
