--- a/resource/qss/default.qss
+++ b/resource/qss/default.qss
@@ -1,3 +1,14 @@
 QLabel#buttonLabel{
     color:white;
 }
+
+QLabel#toplabel{
+    color:white;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+QLabel#bottomlabel{
+    color:white;
+    font-size: 15px;
+}
