--- a/resource/360.qrc
+++ b/resource/360.qrc
@@ -54,7 +54,7 @@
     </qresource>
     <qresource prefix="/main">
         <file>default_theme/MainFrame/Image/AboutLogo.png</file>
-        <file>default_theme/MainFrame/Image/background_mainwnd.jpg</file>
+        <file alias="background">default_theme/MainFrame/Image/background_mainwnd.jpg</file>
         <file alias="btn_examine_now">default_theme/MainFrame/Image/btn_examine_now.png</file>
         <file alias="btn_scan_background">default_theme/MainFrame/Image/btn_scan_background.png</file>
         <file alias="btn_view_detail">default_theme/MainFrame/Image/btn_view_detail.png</file>
