--- a/resource/360.qrc
+++ b/resource/360.qrc
@@ -120,5 +120,25 @@
     </qresource>
     <qresource prefix="/qss">
         <file alias="default">qss/default.qss</file>
+        <file alias="skin">qss/skin.qss</file>
     </qresource>
+    <qresource prefix="/safe">
+        <file alias="scan_button_custom">SafeCheck_theme/Images/scan_button_custom.png</file>
+        <file alias="scan_button_custom_hover">SafeCheck_theme/Images/scan_button_custom_hover.png</file>
+        <file alias="scan_button_full_hover">SafeCheck_theme/Images/scan_button_full_hover.png</file>
+        <file alias="scan_button_full">SafeCheck_theme/Images/scan_button_full.png</file>
+        <file alias="scan_button_quick">SafeCheck_theme/Images/scan_button_quick.png</file>
+        <file alias="scan_button_quick_hover">SafeCheck_theme/Images/scan_button_quick_hover.png</file>
+        <file alias="system_fix">SafeCheck_theme/Images/system_fix.png</file>
+        <file alias="system_patch">SafeCheck_theme/Images/system_patch.png</file>
+        <file>SafeCheck_theme/Images/start_btn.png</file>
+        <file>SafeCheck_theme/Images/stop_scan.png</file>
+        <file>SafeCheck_theme/Images/logo_danger.png</file>
+        <file>SafeCheck_theme/Images/logo_normal.png</file>
+        <file>SafeCheck_theme/Images/logo_safe.png</file>
+        <file>SafeCheck_theme/Images/logo_warning.png</file>
+        <file>SafeCheck_theme/Images/btn_black.png</file>
+    </qresource>
+    <qresource prefix="/clean"/>
+    <qresource prefix="/youhua"/>
 </RCC>
